--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel $npm_package_parcel_entrypoints",
-    "build": "parcel build $npm_package_parcel_entrypoints"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "clean": "rm -rf dist .cache"
   },
   "dependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-react": "^7.12.13",
+    "autoprefixer": "^9.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
@@ -24,10 +27,8 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.1",
+    "postcss-modules": "^4.0.0",
     "prettier": "1.19.1"
-  },
-  "parcel": {
-    "entrypoints": "src/index.html"
   },
   "staticFiles": {
     "staticPath": "public",
