--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-textfit": "^1.1.1",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
