--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "corgivational-gen",
   "description": "generates nice motivational quotes from corgear c:",
+  "repository": "https://github.com/nik1082/corgivational-gen",
   "author": "Jericho Arcelao & Szel Embay",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "parcel src/index.html --no-hmr",
     "build": "parcel build src/index.html",
     "clean": "rm -rf dist .cache"
   },
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-textfit": "^1.1.1",
+    "recoil": "^0.2.0",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
@@ -21,7 +23,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.12.13",
     "autoprefixer": "^9.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
